# parallax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
parallax/: __init__.py  config.py
parallax/distributed/: __init__.py  pmap_trainer.py
parallax/inference/: __init__.py  generate.py
parallax/layers/: __init__.py  attention.py  embeddings.py  feedforward.py  normalization.py
parallax/model/: __init__.py  block.py  transformer.py
parallax/training/: __init__.py  data.py  loss.py  optimizer.py  train_step.py
scripts/: __init__.py  generate.py  train.py
terraform/: README.md  gcp.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_layers.py  test_model.py  test_training.py
