[project]
name = "parallax"
version = "0.1.0"
description = "A research-grade JAX Transformer implementation from scratch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shubham Gautam", email = "gautamshubham658@gmail.com"}
]
keywords = ["jax", "t ransformer", "deep-learning", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "chex>=0.1.86",
    "orbax-checkpoint>=0.5.0",
    "tensorflow>=2.16.0",
    "tensorboard>=2.16.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "einops>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
    "ipython>=8.22.0",
    "jupyter>=1.0.0",
]
tpu = [
    "jax[tpu]>=0.4.30",
]
cuda = [
    "jax[cuda12]>=0.4.30",
]

[project.scripts]
parallax-train = "scripts.train:main"
parallax-generate = "scripts.generate:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["parallax*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["parallax"]

[tool.pyright]
include = ["parallax", "tests", "scripts"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
